--- a/hello/templates/index.html
+++ b/hello/templates/index.html
@@ -5,7 +5,7 @@
 
 <div class="jumbotron text-center">
   <div class="container">
-    <a href="/" class="lang-logo">
+    <a href="/anan" class="lang-logo">
       <img src="{% static 'lang-logo.png'%}">
     </a>
     <h1>Getting Started with Python on Heroku</h1>
