--- a/hello/templates/anan.html
+++ b/hello/templates/anan.html
@@ -5,15 +5,27 @@
 <div class="container">
 
 <h2>阿南市立図書館</h2>
-<p>おお、そうか</p>
+<p>検索結果</p>
 
 {{ text }}
 
-<ul>
+<table class="table table-hover">
+    <tr>
+        <th>No</th>
+        <th>種類</th>
+        <th>書名</th>
+        <th>作者</th>
+        <th>出版社</th>
+        <th>発売日</th>
+    </tr>
 {% for text in texts %}
-    <li>{{ text }}</li>
+    <tr>
+    {% for word in text %}
+        <td>{{ word }}</td>
+    {% endfor %}
+    </tr>
 {% endfor %}
-</ul>
+</table>
 
 </div>
 {% endblock %}
