--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -42,7 +42,12 @@
     .jumbotron .lang-logo img {
         max-width: 100%
     }
-
+    .card-block {
+      padding: 0 1.5rem;
+    }
+    .card-block:nth-child(1) {
+      float: left;
+    }
 
   </style>
 </head>
