--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -42,11 +42,20 @@
     .jumbotron .lang-logo img {
         max-width: 100%
     }
-    .card-block {
+    .book {
+      padding: 1rem 0;
+      border-bottom: 1px solid #ccc;
+      position: relative;
+    }
+    .book-block {
       padding: 0 1.5rem;
     }
-    .card-block:nth-child(1) {
-      float: left;
+    .book-block:nth-child(1) {
+      position: absolute;
+      top: 1rem;
+      left: 0;
+      padding-left: 0;
+      color: #999;
     }
 
   </style>
