--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -48,7 +48,7 @@
       position: relative;
     }
     .book-block {
-      padding: 0 1.5rem;
+      padding: 0 1.5rem 0 2rem;
     }
     .book-block:nth-child(1) {
       position: absolute;
