--- a/hello/templates/anan.html
+++ b/hello/templates/anan.html
@@ -14,18 +14,27 @@
         <input type="submit" value="検索"> -->
     </div>
 </form>
-<p class="result">{{ book_datas|length }} 件の検索結果</p>
+<p class="result_count">{{ book_datas|length }} 件の検索結果</p>
 
 {{ text }}
 
 <div>
 {% for book_data in book_datas %}
     <div class="book">
-        <div class="book-block">{{ book_data.num }}</div>
-        <div class="book-block">{{ book_data.title }}</div>
-        <div class="book-block">{{ book_data.author }}</div>
-        <div class="book-block">{{ book_data.publisher }}</div>
-        <div class="book-block">{{ book_data.publish_date }}</div>
+        <div class="book-num">{{ book_data.num }}</div>
+
+        <div class="book-block">
+            <div>{{ book_data.title }}</div>
+            <div>{{ book_data.author }}</div>
+            <div>{{ book_data.publisher }}</div>
+            <div>{{ book_data.publish_date }}</div>
+        </div>
+
+        <ul class="book-library">
+            <li>那賀川</li>
+            <li>羽ノ浦</li>
+            <li>阿南</li>
+        </ul>
     </div>
 {% endfor %}
 </div>
