--- a/hello/static/css/style.css
+++ b/hello/static/css/style.css
@@ -53,6 +53,7 @@
 .anan [type="search"] {
     border: none;
     font-size: 1.2rem;
+    width: 100%;
 }
 .anan [type="submit"] {
     border: none;
