--- a/hello/templates/anan.html
+++ b/hello/templates/anan.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container anan">
 
-<h1>阿南市立図書3館</h1>
+<h1>阿南市立3図書館</h1>
 <form action="" method="POST">
     <div class="inputs">
         {% csrf_token %}
