--- a/hello/static/css/style.css
+++ b/hello/static/css/style.css
@@ -22,6 +22,12 @@
 }
 .book-library li {
     width: 4rem;
+    background-color: skyblue;
+    color: white;
+    font-size: .8rem;
+    padding: .2rem 0;
+    border-radius: 4px;
+    text-align: center;
 }
 
 .result_count {
