--- a/hello/templates/anan.html
+++ b/hello/templates/anan.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container anan">
 
-<h1>阿南市立3図書館<i>v 0.0.1</i></h1>
+<h1>阿南市立3図書館<i>0.1.0</i></h1>
 <form action="" method="POST">
     <div class="inputs">
         {% csrf_token %}
