--- a/hello/static/css/style.css
+++ b/hello/static/css/style.css
@@ -38,7 +38,7 @@
     margin: 1rem 0;
 }
 .anan h1 i {
-    font-size: .8rem;
+    font-size: 1.5rem;
     font-style: normal;
     padding-left: .5rem;
 }
